[package]
name = "op-sys"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "op_sys"
path = "src/main.rs"
test = false
bench = false

[features]
default = ["device", "rpi5"]
device = ["color-rgb"]
emulator = []
rpi5 = []
rpi4 = []
color-rgb = []

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "9.x.x" }
